other/kubernetes/kind/test2/depl2LB.yml
# depl2LB.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service-echo
  template:
    metadata:
      labels:
        app: service-echo
    spec:
      containers:
        - name: service2
          image: ghcr.io/moutansos/hellocontainers:latest
          ports:
            - name: http
              containerPort: 80
      imagePullSecrets:
        - name: ghcr-secret
      nodeSelector:
        kubernetes.io/os: linux
---
