other/kubernetes/kind/test2/serviceLB.yml
apiVersion: v1
kind: Service
metadata:
  name: servicelb
spec:
  ports:
    - port: 8081
      protocol: TCP
      targetPort: 80
  selector:
    app: service-echo
  type: LoadBalancer
